<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_web_viewer">WebViewerActivity</string>
    <string name="title_activity_ssh">SSHActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_loading">ShareBox</string>
    <string name="title_activity_sftpsender">SFTPsender</string>
    <string name="title_activity_UMHome">Control Panel</string>
    <string name="title_activity_UMAdd">Add a user</string>
    <string name="title_activity_UMManage">Manage users</string>

    <string name="vlc_needed">This application need VLC or MX Player to run</string>
    <string name="connect_to">Connected to \</string>
    <string name="connect_as">Connected as \n</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="no_connect_sharebox">You aren\'t connected to a Sharebox or you aren\'t login</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_sharebox">No ShareBox found</string>
    <string name="wifi_pass">sleedification</string>
    <string name="wifi_enable">Wifi enable</string>
    <string name="wifi_disable">Wifi disable</string>
    <string name="wifi_prefix">ShareBox</string>
    <string name="error_:">Error :</string>
    <string name="error">An error as occurred</string>
    <string name="root_pass">Universalis</string>
    <string name="uploading">File uploading...</string>
    <string name="upload_url">http://192.168.42.1/android/upload.php</string>
    <string name="upload_start">The file upload has begin</string>
    <string name="file_not_exist">Source file doesn\'t exist : </string>
    <string name="upload_complete_full">File successfully upload. \n\n See it in explorer.\n\n</string>
    <string name="upload_complete">File successfully upload</string>
    <string name="dont_connected">You aren\'t connected</string>
    <string name="must_connect">You can login now</string>
    <string name="pass_correct">Connecting...</string>
    <string name="id_pass_empty">You must enter login and password</string>
    <string name="id_pass_wrong">Invalid login or password</string>
    <string name="pass_wrong">Invalid password</string>
    <string name="control_panel">Control pannel</string>
    <string name="browse_files">Browse files</string>
    <string name="send_sharebox">Send to ShareBox</string>
    <string name="add_user">Add user</string>
    <string name="manage_users">Manage users</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_login">Invalid login</string>
    <string name="differents_passwords">The passwords must be the same</string>
    <string name="login_already_exist">Login already used</string>
    <string name="user_added">User successfully created</string>
    <string name="retry">An error has occured. Try again.</string>
    <string name="users_list">Users :</string>
    <string name="delete_user">Delete user</string>
    <string name="user_deleted">User deleted successfully</string>
    <string name="unknown_user">Unknown username</string>
    <string name="no_admin_delete">You can\'t delete admin user</string>
    <string name="mountExternal">Mount USB devices</string>
    <string name="unmountExternal">Unmount USB devices</string>
    <string name="preparedExternal">USB devices have been mounted</string>
    <string name="retiredExternal">USB devices have been unmounted</string>

</resources>