<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#004a81"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight="100"
    android:background="#004a81" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/layout_top">

        <ImageView
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_weight="20"
            android:src="@drawable/ic_launcher"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="80"
            android:id="@+id/buttonDisconnect"/>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="75pt"
        android:layout_below="@+id/layout_top"
        android:id="@+id/manageButton"
        android:text="@string/manage_users"
        android:onClick="manageUsers"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="75pt"
        android:layout_below="@+id/manageButton"
        android:id="@+id/addButton"
        android:text="@string/add_user"
        android:onClick="addUser"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="20pt"
        android:layout_below="@+id/addButton"
        android:id="@+id/mountButton"
        android:text="@string/mountExternal"
        android:onClick="mountExternal"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="20pt"
        android:layout_below="@+id/mountButton"
        android:id="@+id/unmountButton"
        android:text="@string/unmountExternal"
        android:onClick="unmountExternal"/>
</RelativeLayout>
</ScrollView>