<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight="100"
    android:background="#004a81" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_top">

        <ImageView
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_weight="20"
            android:src="@drawable/ic_launcher"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="80"
            android:id="@+id/buttonDisconnect"/>
    </LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="#D3290F"
        android:textSize="45px"
        android:id="@+id/TVinfo"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="45px"
        android:id="@+id/tvID"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="textNoSuggestions"
        android:textSize="45px"
        android:layout_gravity="center"
        android:id="@+id/identifiant"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70px"
        android:textSize="45px"
        android:gravity="center"
        android:text="@string/password"
        android:id="@+id/tvPWD"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20px"
        android:layout_below="@+id/identifiant"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:id="@+id/password"
        android:textSize="45px"
        android:layout_toRightOf="@+id/tvPWD"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70px"
        android:textSize="45px"
        android:text="@string/confirm"
        android:onClick="onLogin"
        android:layout_gravity="center"/>

</LinearLayout>
